@@ -46,6 +46,9 @@ Version 1.4.18 - 11 May 2009
   - Added Khmer translation (Thanks to Khoem Sokhem).
   - Remove ability for HTML emails to use CSS positioning to overlay
     SquirrelMail content (Thanks to Luc Beurton). (#2723196) [CVE-2009-1581]
+  - Fixed improper sanitizing of PHP_SELF and the lack of sanitizing of
+    QUERY_STRING server environment variables. (Thanks to Niels Teusink
+    and Christian Balzer). [CVE-2009-1578]
 
 Version 1.4.17 - 03 December 2008
 ---------------------------------
